# Speech_Recognition_TestDevice

./: BUILD_GUIDE.md  CMakeLists.txt  CRITICAL_TEST.md  HARDWARE.md  README.md  TROUBLESHOOTING.md  build.ps1  i2c_test_device.c  st7796_driver.c  st7796_driver.h  test_minimal.c
.github/: copilot-instructions.md
